# prefix-tree

./: CMakeLists.txt  README.md  main.c
include/: ip.h  mask.h  tree.h  trie.h
src/: ip.c  mask.c  tree.c  trie.c
test/: test.c  test_api.c  test_trie.c  test_utils.c  utils.c
test/include/: test_utils.h  utils.h
